--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
     header {
       text-align: center;
-      background: url("images/banner.jpg");
+      background: url("http://pnge.org/wp-content/uploads/2016/12/1480662458_424_images.jpg");
       background-size: cover;
       color: white;
     }
